Source/Tree.GlueGen/antlr/DEFParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from DEF.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class DEFParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, IDENTIFIER=27, WHITESPACE=28, NEWLINE=29, BLOCKCOMMENT=30, 
		LINECOMMENT=31, INTEGERLITERAL=32, DECIMALLITERAL=33, OCTALLITERAL=34, 
		HEXLITERAL=35, BINARYLITERAL=36;
	public const int
		RULE_def = 0, RULE_interopDefinition = 1, RULE_structDefinition = 2, RULE_systemDefinition = 3, 
		RULE_struct = 4, RULE_system = 5, RULE_native = 6, RULE_managed = 7, RULE_variable = 8, 
		RULE_function = 9, RULE_funcArgumentList = 10, RULE_funcArgument = 11, 
		RULE_typeSpecifier = 12, RULE_baseType = 13, RULE_arraySize = 14, RULE_identifier = 15, 
		RULE_integerLiteral = 16, RULE_void = 17, RULE_bool = 18, RULE_char = 19, 
		RULE_i8 = 20, RULE_u8 = 21, RULE_i16 = 22, RULE_u16 = 23, RULE_i32 = 24, 
		RULE_u32 = 25, RULE_f32 = 26, RULE_f64 = 27, RULE_string = 28, RULE_enum = 29, 
		RULE_pointer = 30, RULE_endStatement = 31;
	public static readonly string[] ruleNames = {
		"def", "interopDefinition", "structDefinition", "systemDefinition", "struct", 
		"system", "native", "managed", "variable", "function", "funcArgumentList", 
		"funcArgument", "typeSpecifier", "baseType", "arraySize", "identifier", 
		"integerLiteral", "void", "bool", "char", "i8", "u8", "i16", "u16", "i32", 
		"u32", "f32", "f64", "string", "enum", "pointer", "endStatement"
	};

	private static readonly string[] _LiteralNames = {
		null, "'{'", "'}'", "'struct'", "'system'", "'native'", "'managed'", "'('", 
		"')'", "','", "'['", "']'", "'void'", "'bool'", "'char'", "'i8'", "'u8'", 
		"'i16'", "'u16'", "'i32'", "'u32'", "'f32'", "'f64'", "'string'", "'enum'", 
		"'*'", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "IDENTIFIER", "WHITESPACE", "NEWLINE", "BLOCKCOMMENT", 
		"LINECOMMENT", "INTEGERLITERAL", "DECIMALLITERAL", "OCTALLITERAL", "HEXLITERAL", 
		"BINARYLITERAL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "DEF.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static DEFParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public DEFParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public DEFParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class DefContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public InteropDefinitionContext[] interopDefinition() {
			return GetRuleContexts<InteropDefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public InteropDefinitionContext interopDefinition(int i) {
			return GetRuleContext<InteropDefinitionContext>(i);
		}
		public DefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_def; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterDef(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitDef(this);
		}
	}

	[RuleVersion(0)]
	public DefContext def() {
		DefContext _localctx = new DefContext(Context, State);
		EnterRule(_localctx, 0, RULE_def);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 104L) != 0)) {
				{
				{
				State = 64;
				interopDefinition();
				}
				}
				State = 69;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InteropDefinitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StructDefinitionContext structDefinition() {
			return GetRuleContext<StructDefinitionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SystemDefinitionContext systemDefinition() {
			return GetRuleContext<SystemDefinitionContext>(0);
		}
		public InteropDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_interopDefinition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterInteropDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitInteropDefinition(this);
		}
	}

	[RuleVersion(0)]
	public InteropDefinitionContext interopDefinition() {
		InteropDefinitionContext _localctx = new InteropDefinitionContext(Context, State);
		EnterRule(_localctx, 2, RULE_interopDefinition);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 72;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__2:
				{
				State = 70;
				structDefinition();
				}
				break;
			case T__4:
			case T__5:
				{
				State = 71;
				systemDefinition();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructDefinitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StructContext @struct() {
			return GetRuleContext<StructContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableContext[] variable() {
			return GetRuleContexts<VariableContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableContext variable(int i) {
			return GetRuleContext<VariableContext>(i);
		}
		public StructDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structDefinition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterStructDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitStructDefinition(this);
		}
	}

	[RuleVersion(0)]
	public StructDefinitionContext structDefinition() {
		StructDefinitionContext _localctx = new StructDefinitionContext(Context, State);
		EnterRule(_localctx, 4, RULE_structDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			@struct();
			State = 75;
			identifier();
			State = 76;
			Match(T__0);
			State = 80;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 167768064L) != 0)) {
				{
				{
				State = 77;
				variable();
				}
				}
				State = 82;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 83;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SystemDefinitionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public SystemContext system() {
			return GetRuleContext<SystemContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NativeContext native() {
			return GetRuleContext<NativeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ManagedContext managed() {
			return GetRuleContext<ManagedContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionContext[] function() {
			return GetRuleContexts<FunctionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionContext function(int i) {
			return GetRuleContext<FunctionContext>(i);
		}
		public SystemDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_systemDefinition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterSystemDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitSystemDefinition(this);
		}
	}

	[RuleVersion(0)]
	public SystemDefinitionContext systemDefinition() {
		SystemDefinitionContext _localctx = new SystemDefinitionContext(Context, State);
		EnterRule(_localctx, 6, RULE_systemDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__4:
				{
				State = 85;
				native();
				}
				break;
			case T__5:
				{
				State = 86;
				managed();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 89;
			system();
			State = 90;
			identifier();
			State = 91;
			Match(T__0);
			State = 95;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 167768064L) != 0)) {
				{
				{
				State = 92;
				function();
				}
				}
				State = 97;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 98;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructContext : ParserRuleContext {
		public StructContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_struct; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterStruct(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitStruct(this);
		}
	}

	[RuleVersion(0)]
	public StructContext @struct() {
		StructContext _localctx = new StructContext(Context, State);
		EnterRule(_localctx, 8, RULE_struct);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 100;
			Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SystemContext : ParserRuleContext {
		public SystemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_system; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterSystem(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitSystem(this);
		}
	}

	[RuleVersion(0)]
	public SystemContext system() {
		SystemContext _localctx = new SystemContext(Context, State);
		EnterRule(_localctx, 10, RULE_system);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NativeContext : ParserRuleContext {
		public NativeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_native; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterNative(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitNative(this);
		}
	}

	[RuleVersion(0)]
	public NativeContext native() {
		NativeContext _localctx = new NativeContext(Context, State);
		EnterRule(_localctx, 12, RULE_native);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 104;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ManagedContext : ParserRuleContext {
		public ManagedContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_managed; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterManaged(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitManaged(this);
		}
	}

	[RuleVersion(0)]
	public ManagedContext managed() {
		ManagedContext _localctx = new ManagedContext(Context, State);
		EnterRule(_localctx, 14, RULE_managed);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EndStatementContext endStatement() {
			return GetRuleContext<EndStatementContext>(0);
		}
		public VariableContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variable; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterVariable(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitVariable(this);
		}
	}

	[RuleVersion(0)]
	public VariableContext variable() {
		VariableContext _localctx = new VariableContext(Context, State);
		EnterRule(_localctx, 16, RULE_variable);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108;
			typeSpecifier();
			State = 109;
			identifier();
			State = 110;
			endStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EndStatementContext endStatement() {
			return GetRuleContext<EndStatementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncArgumentListContext funcArgumentList() {
			return GetRuleContext<FuncArgumentListContext>(0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_function; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterFunction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitFunction(this);
		}
	}

	[RuleVersion(0)]
	public FunctionContext function() {
		FunctionContext _localctx = new FunctionContext(Context, State);
		EnterRule(_localctx, 18, RULE_function);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 112;
			typeSpecifier();
			State = 113;
			identifier();
			State = 114;
			Match(T__6);
			State = 116;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 167768064L) != 0)) {
				{
				State = 115;
				funcArgumentList();
				}
			}

			State = 118;
			Match(T__7);
			State = 119;
			endStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncArgumentListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public FuncArgumentContext[] funcArgument() {
			return GetRuleContexts<FuncArgumentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FuncArgumentContext funcArgument(int i) {
			return GetRuleContext<FuncArgumentContext>(i);
		}
		public FuncArgumentListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcArgumentList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterFuncArgumentList(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitFuncArgumentList(this);
		}
	}

	[RuleVersion(0)]
	public FuncArgumentListContext funcArgumentList() {
		FuncArgumentListContext _localctx = new FuncArgumentListContext(Context, State);
		EnterRule(_localctx, 20, RULE_funcArgumentList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121;
			funcArgument();
			State = 126;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__8) {
				{
				{
				State = 122;
				Match(T__8);
				State = 123;
				funcArgument();
				}
				}
				State = 128;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FuncArgumentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TypeSpecifierContext typeSpecifier() {
			return GetRuleContext<TypeSpecifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public FuncArgumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_funcArgument; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterFuncArgument(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitFuncArgument(this);
		}
	}

	[RuleVersion(0)]
	public FuncArgumentContext funcArgument() {
		FuncArgumentContext _localctx = new FuncArgumentContext(Context, State);
		EnterRule(_localctx, 22, RULE_funcArgument);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129;
			typeSpecifier();
			State = 130;
			identifier();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeSpecifierContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BaseTypeContext baseType() {
			return GetRuleContext<BaseTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PointerContext pointer() {
			return GetRuleContext<PointerContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ArraySizeContext arraySize() {
			return GetRuleContext<ArraySizeContext>(0);
		}
		public TypeSpecifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeSpecifier; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterTypeSpecifier(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitTypeSpecifier(this);
		}
	}

	[RuleVersion(0)]
	public TypeSpecifierContext typeSpecifier() {
		TypeSpecifierContext _localctx = new TypeSpecifierContext(Context, State);
		EnterRule(_localctx, 24, RULE_typeSpecifier);
		try {
			State = 141;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 132;
				baseType();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 133;
				baseType();
				State = 134;
				pointer();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 136;
				baseType();
				State = 137;
				Match(T__9);
				State = 138;
				arraySize();
				State = 139;
				Match(T__10);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BaseTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VoidContext @void() {
			return GetRuleContext<VoidContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BoolContext @bool() {
			return GetRuleContext<BoolContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CharContext @char() {
			return GetRuleContext<CharContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public I8Context i8() {
			return GetRuleContext<I8Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public U8Context u8() {
			return GetRuleContext<U8Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public I16Context i16() {
			return GetRuleContext<I16Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public U16Context u16() {
			return GetRuleContext<U16Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public I32Context i32() {
			return GetRuleContext<I32Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public U32Context u32() {
			return GetRuleContext<U32Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public F32Context f32() {
			return GetRuleContext<F32Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public F64Context f64() {
			return GetRuleContext<F64Context>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StringContext @string() {
			return GetRuleContext<StringContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EnumContext @enum() {
			return GetRuleContext<EnumContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IdentifierContext identifier() {
			return GetRuleContext<IdentifierContext>(0);
		}
		public BaseTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_baseType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.EnterBaseType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IDEFListener typedListener = listener as IDEFListener;
			if (typedListener != null) typedListener.ExitBaseType(this);
		}
	}
